@@ -42,6 +42,7 @@ Release 0.19.1 - Unreleased
    HBASE-1240  Would be nice if RowResult could be comparable
                (Erik Holstad via Stack)
    HBASE-1229  Apply HADOOP-5369 to HBase MapFile (Ben Maurer via Stack)
+   HBASE-803   Atomic increment operations (Ryan Rawson and Jon Gray via Stack)
 
 Release 0.19.0
   INCOMPATIBLE CHANGES
